Bug 128037 - GTK3: insert caption crash
Summary: GTK3: insert caption crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-09 05:50 UTC by raal
Modified: 2019-10-09 12:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2019-10-09 05:50:16 UTC
Description:
Crash when insert caption of the image

Steps to Reproduce:
1.open writer, insert image
2.right click image -> insert caption
3.write text into Caption textbox
4. button OK

Actual Results:
crash

Expected Results:
no crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Crash in Version: 6.4.0.0.alpha0+
Build ID: 52cda5c5ae426761ccbdb4f20419098eab195303
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 

No crash in Version: 6.4.0.0.alpha0+
Build ID: 52cda5c5ae426761ccbdb4f20419098eab195303
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11;
Comment 1 raal 2019-10-09 05:51:50 UTC
Caolán, I thought you might be interested in this issue
Comment 2 Caolán McNamara 2019-10-09 10:15:04 UTC
I see an a11y assert. gtk3 has a working a11y stack while the x11 backend doesn't.
Comment 3 Caolán McNamara 2019-10-09 10:25:58 UTC
I can fix it anyway though
Comment 4 Commit Notification 2019-10-09 11:53:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2fdfd6fcf6da5f11846c8c99943e24d85baf92c5

Resolves: tdf#128037 don't create a11y element just to destroy it

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.