Resolves: tdf#128037 don't create a11y element just to destroy it

Change-Id: I8d613d30116c0201154773421b4f9eb829a94620